# product-database

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: docker.yml  rust.yml
database/: docker-compose.yaml  example_data.sql  init.sql
doc/: openapi.yaml
docker/: Dockerfile.db  Dockerfile.service  Dockerfile.ui
docker/db/: init.sql
example/: config.toml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  db.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
product-db/: Cargo.toml
product-db-cli/: Cargo.toml
product-db-cli/src/: logging.rs  main.rs  options.rs
product-db-ui/: README.md  index.html  package-lock.json  package.json
product-db-ui/src/: App.css  App.scss  App.tsx  index.css  index.scss  main.tsx  routes.tsx
product-db-ui/src/components/: AppBar.scss  AppBar.tsx  MenuBar.tsx  Navigation.tsx  ProductRequests.tsx  Products.tsx
product-db-ui/src/components/styles/: colors_white.scss  theme.scss
product-db/src/: data_backend.rs  error.rs  lib.rs  options.rs  postgres.rs  secret.rs  service.rs  service_json.rs  sql_types.rs
product-db/tests/: missing_products.json  postgres_backend_test.rs  service_test.rs
test_data/: products.json
