[package]
name = "product-db-cli"
version = "0.1.1"
edition = "2021"

[dependencies]
product-db = { path = "../product-db" }
log = "0.4"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.2", features = ["derive"] }
serde_derive = "1.0"
serde = "1.0"
env_logger = "0.11"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
